--- a/Cubitwelve/dev.yml
+++ b/Cubitwelve/dev.yml
@@ -1,10 +1,16 @@
 version: '3.3'
 
 services:
-  sqldata:
-    image: mcr.microsoft.com/mssql/server
+  postgres:
+    image: postgres:15-alpine
     environment:
-    - MSSQL_SA_PASSWORD=${MSSQL_SA_PASSWORD}
-    - ACCEPT_EULA=Y
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=cubi12
     ports:
-    - "5434:1433"
+      - "5433:5432"  
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
